--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,23 @@
 spring.application.name=demo_Thy
 
-server.port=8088
-# T?t tính n?ng cache c?a Thymeleaf ?? phát tri?n nhanh h?n
-spring.thymeleaf.cache=false
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-# ??nh ngh?a th? m?c ch?a các message ?a ngôn ng?
-spring.messages.basename=i18n/messages
-# Ch? ??nh ngôn ng? m?c ??nh (Ti?ng Vi?t)
-spring.web.locale=vi_VN
-# C?u hình k?t n?i ??n c? s? d? li?u MySQL
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=springboot_Thy;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=springboot;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
 spring.datasource.username=sa
 spring.datasource.password=123
-# Hibernate Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
+spring.mandatory-file-encoding=UTF-8
+spring.mail.default-encoding=UTF-8
+
+storage.location= D:\\uploadSpring
+
+server.port=8080
+
